--- a/bower.json
+++ b/bower.json
@@ -4,12 +4,14 @@
   "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js",
   "dependencies": {
     "bootstrap": "~3",
+    "fontawesome": "~4.3.0",
     "angular": "~1.3",
     "angular-resource": "~1.3",
     "angular-animate": "~1.3",
     "angular-mocks": "~1.3",
     "angular-bootstrap": "~0.13",
     "angular-ui-utils": "bower",
+    "angular-utils-pagination": "~0.8.3",
     "angular-ui-router": "~0.2",
     "angular-file-upload": "1.1.5",
     "angular-messages": "1.3.17"
